fix: css alignment issue

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -205,6 +205,12 @@ tr.table-placeholder td {
   margin-bottom: 40px;
 }
 
+.form-groups {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+}
+
 .form-group {
   border: 1px solid gray;
   /* width: 400px; */
@@ -215,7 +221,7 @@ tr.table-placeholder td {
   border-radius: 10px;
   padding: 20px;
   text-align: center;
-  display: inline-block;
+  flex-grow: 1;
 }
 
 .form-group label {
